--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-<!--Dainius Eiva EEF-24-->
+<!-- Dainius Eiva EEF-24 -->
 <!DOCTYPE html>
 <html lang="lt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dainius Eiva</title>
 </head>
 <body>
-    
-</body>
-</html> <header>
+  <header>
     <h1>Dainius Eiva</h1>
-    <h2>Elektros Energetikos inžinerija</h2>  
+    <h2>Elektros energetikos inžinerija</h2>
+  </header>
 
   <main>
     <section id="apie">
       <h3>Apie mane</h3>
-      <p>Esu antro kurso Elektros energetikos inžinerijos studentas,
-        šiandiena kankinausi rašant matematinės analizės koliokviumą.</p>
+      <!-- 1c -->
+      <p><u>Esu antro kurso Elektros energetikos inžinerijos studentas,
+        šiandiena kankinausi rašant matematinės analizės koliokviumą.</u></p>
     </section>
 
     <section id="nuoroda">
@@ -32,24 +32,34 @@
     <section id="paveikslelis">
       <h3>Paveikslėlis</h3>
       <figure>
-        <img src="nuotraukos/sad%20blanket%20cat.jpg" width="360">
+        <img src="nuotraukos/sad%20blanket%20cat.jpg" alt="Katė po antklode" width="360">
         <figcaption>Paveikslėlis iš katalogo <code>nuotraukos/</code>.</figcaption>
       </figure>
     </section>
 
     <section id="sarasai">
       <h3>Planai</h3>
-      <h4>Top 3 dalykai elektros energetikoje kuriuos norėčiau išmokti</h4>
+
+      <h4>Top 3 dalykai elektros energetikoje, kuriuos norėčiau išmokti</h4>
+      <!-- 1a -->
       <ol>
-        <li>elektros energijos perdavimas</li>
-        <li>elektros energijos politika bei ekonomika</li>
+        <li><strong>elektros energijos perdavimas</strong></li>
+        <li><b>elektros energijos politika bei ekonomika</b></li>
         <li>kaip gaminama, perduodama, panaudojama elektros energija</li>
       </ol>
+
+      <h4>Įgūdžiai, kuriuos prisimenu ir / ar mokausi</h4>
+      <!-- 1b -->
+      <ul>
+        <li><em>GitHub naudojimas</em></li>
+        <li><i>HTML programavimas</i></li>
+        <li>Matematikos sprendimas</li>
+      </ul>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025-11-07 Dainius Eiva</p>
+    <p>&copy; 2025 Dainius Eiva</p>
   </footer>
 </body>
 </html>
